fix: wrap table with .table-container

--- a/source/css/_common/scaffolding/tables.styl
+++ b/source/css/_common/scaffolding/tables.styl
@@ -1,11 +1,14 @@
-table {
+.table-container {
   margin: 20px 0;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+table {
   width: $table-width;
   border-collapse: collapse;
   border-spacing: 0;
   font-size: $table-font-size;
-  display: block;
-  overflow: auto;
 }
 
 table>tbody>tr {
